fix: Fix alignment of nav for all screen sizes
Fixes the navigation background and navigation buttons not aligning
correctly with the center of the webpage. This also impacted the
positioning of the projects tab which is now fixed.

--- a/css/style.css
+++ b/css/style.css
@@ -32,31 +32,31 @@ body {
 
 #content {
     margin-top: 5vh;
-    display: flex;
-    width: 100%;
-    height: 100%;
-    left: 0;
+    position: relative;
 }
 
 #nav-container {
-    justify-content: center;
-    align-items: center;
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    transition: 0.5s left;
     left: 0;
+    display: flex;
+    justify-content: center;
+    align-items: top;
 }
 
 #nav-background {
-    position: absolute;
     background-color: rgb(34, 34, 34);
     z-index: -10;
     font-size: 13px;
     color: white;
-    transition: 0.5s left;
+    position: absolute;
 }
 
 #nav {
-    position: absolute;
-    transition: 0.5s left;
     z-index: 0;
+    position: absolute;
 }
 
 #nav a {
@@ -94,6 +94,7 @@ body {
     position: relative;
     left: 100%;
     transition: 0.4s left;
+    z-index: -10;
 }
 
 #projects-content {
@@ -130,6 +131,10 @@ body {
         font-size: 25px;
     }
 
+    #nav-background {
+        font-size: 14px;
+    }
+
     #projects-content {
         font-size: 25px;
     }
@@ -152,7 +157,7 @@ body {
     }
 
     #nav-background {
-        font-size: 12px;
+        font-size: 11px;
     }
 
     #projects-content {
